# beer-tap-system

./: .copilot-instructions.json  .dockerignore  .env.example  .gitattributes  .gitignore  .stignore  LOCALIZATION_SUMMARY.md  PILOT_RUNBOOK.md  PILOT_SCOPE.md  PROJECT_STATUS.md  README.md  SECURITY_BASELINE.md  Tiltfile  backup_initial.sql  docker-compose.tilt.yml  docker-compose.yml  init-db.sh  mkdocs.yml  package-lock.json  project_context.md
admin-app/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
admin-app/src-tauri/: Cargo.toml  tauri.conf.json
admin-app/src-tauri/src/: api_client.rs  main.rs  nfc_handler.rs  reader_manager.rs  server_config.rs
admin-ui/: Dockerfile  package-lock.json  package.json
backend/: Dockerfile  database.py  dev_db_cleanup.py  dev_seed_tap_display_catalog.py  entrypoint.sh  main.py  media_storage.py  models.py  operator_stream.py  pos_adapter.py  pytest.ini  requirements-test.txt  requirements.txt  runtime_diagnostics.py  schemas.py  security.py  startup_checks.py
docs/: ADMIN_APP_AUDIT.md  API_REFERENCE.md  BUG_REPORT_CARD_NOT_RELEASED.md  DATA_DICTIONARY.md  INDEX.md  INTERFACE_CONTRACT.md  QA_Checklist.md  REPO_AUDIT.md  RPI_INTERNALS.md  SOP_Bartender.md  baseline.md  feature_reference.md  features-to-issues.csv  incident_severity_matrix.md  openapi_fragment.yaml  pilot-test-plan.md  postgres_schema.sql  sqlite_schema.sql
nginx/: nginx.conf
product/: spec
rpi-controller/: config.py  database.py  database_setup.py  display_formatters.py  display_runtime.py  flow_manager.py  (+17 more)
(+427 files in other folders)
